# cmake-study

./: .gitignore  study_plan.md
001_get_started/: CMakeLists.txt  hello.c  readme.md
002_buildcpp/: CMakeLists.txt  clean.sh  math  math_demo.cpp  readme.md  run_cmake.sh
003_mylib/: CMakeLists.txt  gen_prj.sh
003_mylib/MyApp/: main.cpp
003_mylib/MyLib/: CMakeLists.txt
003_mylib/MyLib/include/: MyLib.h
003_mylib/MyLib/src/: MyLib.cpp
004_mylibsrc/MyLib/: CMakeLists.txt
004_mylibsrc/MyLib/include/: MyLib.h
004_mylibsrc/MyLib/src/: StringLib.cpp
005_listsrc/: CMakeLists.txt  build.sh
005_listsrc/MyApp/: main.cpp
005_listsrc/MyLib/: CMakeLists.txt
006_xcode/: readme.md
006_xcode/MyApp/: main.cpp
006_xcode/MyLib/include/: MyLib.h
006_xcode/xcode_prj/005_listrc.build/Debug/MyApp.build/Objects-normal/x86_64/: MyApp.LinkFileList  main.d
006_xcode/xcode_prj/005_listrc.build/Debug/ZERO_CHECK.build/: Script-0C9EDA1D3DA7E2089579B7F3.sh
006_xcode/xcode_prj/005_listrc.xcodeproj/: project.pbxproj
006_xcode/xcode_prj/005_listrc.xcodeproj/project.xcworkspace/xcuserdata/kenlee.xcuserdatad/: UserInterfaceState.xcuserstate
006_xcode/xcode_prj/005_listrc.xcodeproj/xcuserdata/kenlee.xcuserdatad/xcschemes/: xcschememanagement.plist
006_xcode/xcode_prj/Debug/: MyApp
006_xcode/xcode_prj/MyLib/005_listrc.build/Debug/MyLib.build/Objects-normal/x86_64/: MathLib.d  MyLib.LinkFileList
006_xcode/xcode_prj/MyLib/MyLib.xcodeproj/: project.pbxproj
006_xcode/xcode_prj/SharedPrecompiledHeaders/SharedPrecompiledHeaders/290801930453250953/: cmake_pch.hxx.d  cmake_pch.hxx.gch
007_vcpkg/: CMakeLists.txt  clean.sh  gen_prj.sh  readme.md  run.sh
007_vcpkg/MyApp/: main.cpp
007_vcpkg/MyLib/src/: MathLib.cpp
007_vcpkg/xcode_prj/007_vcpkg.xcodeproj/: project.pbxproj
007_vcpkg/xcode_prj/007_vcpkg.xcodeproj/project.xcworkspace/xcuserdata/kenlee.xcuserdatad/: UserInterfaceState.xcuserstate
007_vcpkg/xcode_prj/007_vcpkg.xcodeproj/xcuserdata/kenlee.xcuserdatad/xcschemes/: xcschememanagement.plist
007_vcpkg/xcode_prj/MyLib/MyLib.xcodeproj/: project.pbxproj
008_imgui/: CMakeLists.txt  gen_xcode_prj.sh  imgui.ini  readme.md
008_imgui/MyApp/: main.cpp
008_imgui/glad/include/glad/: glad.h
008_imgui/glad/src/: glad.c
008_imgui/xcode_prj/007_vcpkg.build/Debug/MyApp.build/Objects-normal/x86_64/: MyApp.LinkFileList  main.d
008_imgui/xcode_prj/007_vcpkg.build/Debug/ZERO_CHECK.build/: Script-3D513C761701F4A5BF52879B.sh
008_imgui/xcode_prj/007_vcpkg.xcodeproj/: project.pbxproj
008_imgui/xcode_prj/007_vcpkg.xcodeproj/project.xcworkspace/xcuserdata/kenlee.xcuserdatad/: UserInterfaceState.xcuserstate
008_imgui/xcode_prj/007_vcpkg.xcodeproj/xcuserdata/kenlee.xcuserdatad/xcschemes/: xcschememanagement.plist
008_imgui/xcode_prj/SharedPrecompiledHeaders/SharedPrecompiledHeaders/2811459830897440690/: cmake_pch.hxx.d  cmake_pch.hxx.gch
009_simpletdd/: CMakeLists.txt  TestMain.cpp
009_simpletdd/script/: gen_prj.sh  test.sh
010_vcpkg_sh/: CMakeLists.txt  README.md  gen_prj.sh  main.cpp
010_vcpkg_sh/script/: build.sh  install_package.sh  setup_vcpkg.bat  setup_vcpkg.sh
011_testcpp/: CMakeLists.txt  TestMain.cpp
011_testcpp/script/: gen_xcode_prj.sh
011_testcpp/src/: CppTest.cpp  CppTest.hpp  SimpleTest.cpp  SimpleTest.h  TestHelper.h
011_testcpp/xcode_prj/011_testcpp.build/Debug/ZERO_CHECK.build/: Script-20AD333957289F7C72DD73EB.sh
011_testcpp/xcode_prj/011_testcpp.build/Debug/aTest.build/Objects-normal/x86_64/: SimpleTest.d  aTest.LinkFileList
011_testcpp/xcode_prj/011_testcpp.build/Debug/cppTest.build/Objects-normal/x86_64/: CppTest.d  cppTest.LinkFileList
011_testcpp/xcode_prj/011_testcpp.build/Debug/test.build/Objects-normal/x86_64/: SimpleTest.d  TestMain.d  TestMain.dia  test.LinkFileList
011_testcpp/xcode_prj/011_testcpp.xcodeproj/: project.pbxproj
011_testcpp/xcode_prj/011_testcpp.xcodeproj/project.xcworkspace/xcuserdata/kenlee.xcuserdatad/: UserInterfaceState.xcuserstate
011_testcpp/xcode_prj/011_testcpp.xcodeproj/xcuserdata/kenlee.xcuserdatad/xcschemes/: xcschememanagement.plist
011_testcpp/xcode_prj/Debug/: aTest  cppTest  test
